update: APIの処理追加

--- a/springboot/src/main/resources/templates/index.html
+++ b/springboot/src/main/resources/templates/index.html
@@ -7,6 +7,7 @@
 <body>
     <h1>Users</h1>
     <input type="button" onclick="location.href='/add'" value="追加ページ">
+    <input type="button" onclick="location.href='/api/users'" value="Usersページ">
     <ul>
         <li th:each="user : ${users}">[[${user.name}]]</li>
     </ul>
